--- a/Spotify Clone/style.css
+++ b/Spotify Clone/style.css
@@ -107,3 +107,90 @@ nav ul li {
   opacity: 0;
   transition: opacity 0.4s ease-in;
 }
+
+@media only screen and (min-width: 0px) and (max-width: 480px) {
+  .container {
+    background-size: 100% 100%;
+    width: 88%;
+    background-repeat: no-repeat;
+    box-shadow: 2px 2px 4px 2px black;
+    border-radius: 10px;
+    margin: 23px auto;
+    height: 70vh;
+    background-color: black;
+    color: white;
+    font-family: "Varela Round", sans-serif;
+    padding: 7px 25px;
+    background-image: url(./final\ bg.jpg);
+  }
+  h1 {
+    font-size: 19px;
+  }
+  .songItem {
+    font-weight: bold;
+    justify-content: space-between;
+    margin: 10px 0px;
+    background: #dfdada;
+    display: flex;
+    height: 35px;
+    width: 65%;
+    align-items: center;
+    color: black;
+    padding: 8px;
+    border-radius: 8px;
+  }
+  .songItem img {
+    border-radius: 5px;
+    width: 28px;
+    height: 27px;
+  }
+  .songName {
+    font-size: 14px;
+  }
+  .time {
+    font-size: 14px;
+  }
+  .bottom {
+    color: white;
+    align-items: center;
+    flex-direction: column;
+    display: flex;
+    width: 100%;
+    position: fixed;
+    height: 68px;
+    background-color: black;
+    justify-content: center;
+  }
+  .icon-cont {
+    font-size: 11px;
+  }
+  .gif {
+    top: 20px;
+    position: absolute;
+    left: 10vw;
+    width: 29%;
+    display: flex;
+    font-family: "Varela Round", sans-serif;
+    align-items: center;
+  }
+  p {
+    font-size: 11px;
+  }
+}
+
+@media only screen and (min-width: 481px) and (max-width: 768px) {
+  .container {
+    background-size: 100% 100%;
+    width: 88%;
+    background-repeat: no-repeat;
+    box-shadow: 2px 2px 4px 2px black;
+    border-radius: 10px;
+    margin: 23px auto;
+    height: 70vh;
+    background-color: black;
+    color: white;
+    font-family: "Varela Round", sans-serif;
+    padding: 7px 25px;
+    background-image: url(./final\ bg.jpg);
+  }
+}
