--- a/Spotify Clone/style.css
+++ b/Spotify Clone/style.css
@@ -107,8 +107,79 @@ nav ul li {
   opacity: 0;
   transition: opacity 0.4s ease-in;
 }
-
-@media only screen and (min-width: 0px) and (max-width: 480px) {
+@media screen and (min-width: 320px) and (max-width: 479px) {
+  .container {
+    background-size: 100% 100%;
+    width: 90%;
+    background-repeat: no-repeat;
+    box-shadow: 2px 2px 4px 2px black;
+    border-radius: 10px;
+    margin: 21px auto;
+    height: 70vh;
+    background-color: black;
+    color: white;
+    font-family: "Varela Round", sans-serif;
+    padding: 7px 10px;
+    background-image: url(./final\ bg.jpg);
+  }
+  h1 {
+    font-size: 19px;
+  }
+  .songItem {
+    font-weight: bold;
+    justify-content: space-between;
+    margin: 10px 0px;
+    background: #dfdada;
+    display: flex;
+    height: 35px;
+    width: 100%;
+    align-items: center;
+    color: black;
+    padding: 8px;
+    border-radius: 8px;
+  }
+  .songItem img {
+    border-radius: 5px;
+    width: 28px;
+    height: 27px;
+  }
+  .songName {
+    font-size: 13px;
+  }
+  .time {
+    font-size: 13px;
+  }
+  .bottom {
+    color: white;
+    align-items: center;
+    flex-direction: column;
+    display: flex;
+    width: 100%;
+    position: fixed;
+    height: 63px;
+    background-color: black;
+    justify-content: center;
+  }
+  .icon-cont {
+    font-size: 11px;
+    margin-left: 47%;
+    font-size: 10px;
+    padding: 3px 0;
+  }
+  .gif {
+    top: 20px;
+    position: absolute;
+    left: 10vw;
+    width: 46%;
+    display: flex;
+    font-family: "Varela Round", sans-serif;
+    align-items: center;
+  }
+  p {
+    font-size: 10px;
+  }
+}
+@media only screen and (max-width: 480px) {
   .container {
     background-size: 100% 100%;
     width: 88%;
@@ -177,8 +248,76 @@ nav ul li {
     font-size: 11px;
   }
 }
-
 @media only screen and (min-width: 481px) and (max-width: 768px) {
+  .container {
+    background-size: 100% 100%;
+    width: 88%;
+    background-repeat: no-repeat;
+    box-shadow: 2px 2px 4px 2px black;
+    border-radius: 10px;
+    margin: 23px auto;
+    height: 70vh;
+    background-color: black;
+    color: white;
+    font-family: "Varela Round", sans-serif;
+    padding: 7px 16px;
+    background-image: url(./final\ bg.jpg);
+  }
+  h1 {
+    font-size: 19px;
+  }
+  .songItem {
+    font-weight: bold;
+    justify-content: space-between;
+    margin: 10px 0px;
+    background: #dfdada;
+    display: flex;
+    height: 35px;
+    width: 59%;
+    align-items: center;
+    color: black;
+    padding: 5px;
+    border-radius: 8px;
+  }
+  .songItem img {
+    border-radius: 5px;
+    width: 28px;
+    height: 27px;
+  }
+  .songName {
+    font-size: 14px;
+  }
+  .time {
+    font-size: 14px;
+  }
+  .bottom {
+    color: white;
+    align-items: center;
+    flex-direction: column;
+    display: flex;
+    width: 100%;
+    position: fixed;
+    height: 68px;
+    background-color: black;
+    justify-content: center;
+  }
+  .icon-cont {
+    font-size: 11px;
+  }
+  .gif {
+    top: 20px;
+    position: absolute;
+    left: 10vw;
+    width: 29%;
+    display: flex;
+    font-family: "Varela Round", sans-serif;
+    align-items: center;
+  }
+  p {
+    font-size: 11px;
+  }
+}
+@media only screen and (min-width: 768px) and (max-width: 1120px) {
   .container {
     background-size: 100% 100%;
     width: 88%;
@@ -192,5 +331,58 @@ nav ul li {
     font-family: "Varela Round", sans-serif;
     padding: 7px 25px;
     background-image: url(./final\ bg.jpg);
+  }
+  h1 {
+    font-size: 19px;
+  }
+  .songItem {
+    font-weight: bold;
+    justify-content: space-between;
+    margin: 10px 0px;
+    background: #dfdada;
+    display: flex;
+    height: 35px;
+    width: 54%;
+    align-items: center;
+    color: black;
+    padding: 8px;
+    border-radius: 8px;
+  }
+  .songItem img {
+    border-radius: 5px;
+    width: 28px;
+    height: 27px;
+  }
+  .songName {
+    font-size: 14px;
+  }
+  .time {
+    font-size: 14px;
+  }
+  .bottom {
+    color: white;
+    align-items: center;
+    flex-direction: column;
+    display: flex;
+    width: 100%;
+    position: fixed;
+    height: 68px;
+    background-color: black;
+    justify-content: center;
+  }
+  .icon-cont {
+    font-size: 11px;
+  }
+  .gif {
+    top: 20px;
+    position: absolute;
+    left: 10vw;
+    width: 29%;
+    display: flex;
+    font-family: "Varela Round", sans-serif;
+    align-items: center;
+  }
+  p {
+    font-size: 11px;
   }
 }
